--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -30,28 +30,23 @@
     </style>
 </head>
 <body>
-    <h1>Политика конфиденциальности</h1>
+<h1>Политика конфиденциальности</h1>
+    <p><strong>Дата вступления в силу:</strong> 10 января 2025 года</p>
 
-    <h2>1. Общая информация</h2>
-    <p>Данное приложение не собирает и не хранит персональные данные пользователей. Все данные, которые могут быть собраны, передаются через сторонние сервисы, такие как:</p>
-    <ul>
-        <li>Рекламный сервис Unity Ads;</li>
-        <li>Сервис аналитики Google Analytics;</li>
-        <li>Система покупок Google Play.</li>
-    </ul>
+    <h2>1. Сбор данных</h2>
+    <p>Наша игра "Экономическая стратегия жизни" не собирает, не хранит и не передает персональные данные пользователей.</p>
 
-    <h2>2. Реклама и аналитика</h2>
-    <p>Приложение использует Unity Ads для показа рекламы. Реклама может собирать данные о вашем устройстве (например, рекламный идентификатор) для показа персонализированных объявлений. Вы можете отключить персонализированную рекламу в настройках своего устройства.</p>
-    <p>Для улучшения работы приложения может использоваться Google Analytics, который собирает анонимные данные о вашем взаимодействии с приложением, такие как частота использования функций и продолжительность сессий.</p>
+    <h2>2. Сторонние сервисы</h2>
+    <p>Игра разработана с использованием Unity, но мы не включаем аналитику, рекламу или другие функции, которые могли бы собирать данные пользователей.</p>
 
-    <h2>3. Покупки</h2>
-    <p>Покупки в приложении осуществляются через:</p>
-    <ul>
-        <li>Систему Google Play;</li>
-    </ul>
-    <p>Покупки через Google Play управляются правилами и политиками Google, и все данные о платежах обрабатываются системой Google.</p>
+    <h2>3. Внешние ссылки</h2>
+    <p>В игре может быть предоставлена ссылка на наш Telegram-канал. Переход по этой ссылке осуществляется по вашему желанию. Мы не отслеживаем и не собираем информацию о вашем переходе.</p>
 
     <h2>4. Изменения в Политике конфиденциальности</h2>
     <p>Мы оставляем за собой право изменять эту политику. Изменения будут публиковаться на этой странице.</p>
+    
+    <h2>4. Контакты</h2>
+    <p>Если у вас есть вопросы о данной Политике конфиденциальности, свяжитесь с нами:</p>
+    <p>Email: Sumrovdevelopment@gmail.com</p>
 </body>
 </html>
