--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -47,6 +47,6 @@
     
     <h2>4. Контакты</h2>
     <p>Если у вас есть вопросы о данной Политике конфиденциальности, свяжитесь с нами:</p>
-    <p>Email: Sumrovdevelopment@gmail.com</p>
+    <p><strong>Email:</strong>strong> Sumrovdevelopment@gmail.com</p>
 </body>
 </html>
