--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -32,21 +32,23 @@
 <body>
 <h1>Политика конфиденциальности</h1>
     <p><strong>Дата вступления в силу:</strong> 10 января 2025 года</p>
+    <p>Настоящая Политика конфиденциальности описывает, как Экономическая стратегия жизни(“Приложение”) обрабатывает информацию пользователей. Мы стремимся обеспечить вашу конфиденциальность и безопасность данных.</p>
 
     <h2>1. Сбор данных</h2>
-    <p>Наша игра "Экономическая стратегия жизни" не собирает, не хранит и не передает персональные данные пользователей.</p>
+    <p>Приложение не собирает и не обрабатывает персональные данные пользователей, такие как имя, адрес, email или IP-адрес.</p>
 
-    <h2>2. Сторонние сервисы</h2>
-    <p>Игра разработана с использованием Unity, но мы не включаем аналитику, рекламу или другие функции, которые могли бы собирать данные пользователей.</p>
+    <h2>2. Файлы cookie и аналитика</h2>
+    <p>Приложение не использует файлы cookie, сторонние аналитические сервисы или технологии отслеживания.</p>
 
-    <h2>3. Внешние ссылки</h2>
-    <p>В игре может быть предоставлена ссылка на наш Telegram-канал. Переход по этой ссылке осуществляется по вашему желанию. Мы не отслеживаем и не собираем информацию о вашем переходе.</p>
+    <h2>3. Сторонние сервисы</h2>
+    <p>Мы не передаем ваши данные третьим сторонам, так как их сбор и обработка в Приложении не осуществляется.</p>
 
     <h2>4. Изменения в Политике конфиденциальности</h2>
-    <p>Мы оставляем за собой право изменять эту политику. Изменения будут публиковаться на этой странице.</p>
+    <p>Мы оставляем за собой право изменять настоящую Политику конфиденциальности. В случае изменений, дата обновления будет изменена. Рекомендуем регулярно проверять данную страницу.</p>
     
     <h2>4. Контакты</h2>
-    <p>Если у вас есть вопросы о данной Политике конфиденциальности, свяжитесь с нами:</p>
+    <p>Если у вас есть вопросы относительно настоящей Политики конфиденциальности, свяжитесь с нами:</p>
     <p><strong>Email:</strong> Sumrovdevelopment@gmail.com</p>
+    <p>Спасибо, что пользуетесь нашим Приложением!</p>
 </body>
 </html>
